# zoho-image-pipeline

./: .gitignore  CLAUDE.md  CustomerReviewSubmissionFormforSAs_Records_1_1.csv  Data-Training.xlsx  EVAL_REPORT.md  INSTALL_TESSERACT.ps1  README.md  VALIDATION_SUMMARY.txt  bse_api.py  config.py  dashboard.py  db.py  export.py  flags.py  image_preprocess.py  merge_csv.py  ocr_check.py  ocr_engine.py  pipeline.py  pyproject.toml  requirements.txt  run.ps1  sheet_source.py  star_detection.py  star_eval.py  star_eval_errors.csv  star_eval_results.csv  star_scan.py  streamlit_app.py  sync_to_github.py  ~$Data-Training.xlsx
.claude/: launch.json  settings.local.json
.streamlit/: config.toml
data/: last_sync.txt  zoho_latest.csv
docs/: Customer_Review_Analysis_User_Guide.docx  Customer_Review_Analysis_User_Guide.pptx  build_docx.js  build_pptx.js  capture.py  capture_table.py  crop.py
tests/: test_star_detection.py
zoho_code_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
