[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zoho-code-pipeline"
version = "1.0.0"
description = "Zoho Review Pipeline Dashboard"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "rapidocr-onnxruntime>=1.3.22",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.2",
]

[project.scripts]
zoho-app = "streamlit_app:main"

[tool.streamlit]
client = { showErrorDetails = true }
