[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoho-code-pipeline"
version = "1.0.0"
description = "Zoho Review Pipeline Dashboard"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "rapidocr-onnxruntime>=1.3.22",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.2",
    "requests>=2.31.0",
]

[project.scripts]
zoho-app = "streamlit_app:main"

[tool.setuptools]
packages = []

[tool.streamlit]
client = { showErrorDetails = true }
